--- a/app/views/static_pages/_info.html.erb
+++ b/app/views/static_pages/_info.html.erb
@@ -9,14 +9,15 @@
                             <a role="button" data-toggle="collapse" 
                                 data-parent="#accordion" href="#collapseOne" 
                                 aria-expanded="true" aria-controls="collapseOne">
-                                    About Decentralised Identifiers
+                                    About Decentralised Identifiers (DIDs)
                             </a>
                         </h2>
                     </div>
                     <div id="collapseOne" class="panel-collapse collapse" 
                             role="tabpanel" aria-labelledby="panel_1">
                         <div class="panel-body">
-                            <p>info text1</p>
+                            <p><a href="https://en.wikipedia.org/wiki/Decentralized_identifier" target="_blank">Decentralized identifiers (DIDs)</a> are a type of globally unique identifier that enables anyone and anything to be identified in a manner that is verifiable, persistent, and does not require the use of a centralized registry. DIDs enable a new model of decentralized digital identity that is often referred to as <a href="https://en.wikipedia.org/wiki/Self-sovereign_identity" target="_blank">self-sovereign identity (SSI)</a>.</p>
+                            <p>A <a href="https://www.w3.org/2019/did-wg/" target="_blank">W3C DID Working Group</a> developed a specification for decentralized identifiers to standardize the core architecture, data model, and representation of DIDs and version 1.0 of this specification was approved as a <a href="https://www.w3.org/TR/did-core/" target="_blank">W3C Recommendation</a> in 2022. This pages provides a validation service for DID Documents - a set of data describing the DID subject and result of the resolution process when resolving a DID.</p>
                         </div>
                     </div>
                 </div>
@@ -26,14 +27,15 @@
                             <a role="button" data-toggle="collapse" 
                                 data-parent="#accordion" href="#collapseTwo" 
                                 aria-expanded="true" aria-controls="collapseTwo">
-                                    About Semantic Overlay Architecture
+                                    About Semantic Overlay Architecture (SOyA)
                             </a>
                         </h2>
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse" 
                             role="tabpanel" aria-labelledby="panel_2">
                         <div class="panel-body">
-                            <p>info text2</p>
+                            <p><a href="https://ownyourdata.github.io/soya/" target="_blank">Semantic Overlay Architecture (SOyA)</a> is a data model authoring and publishing platform and also provides functionalities for validation and transformation. It builds on W3C <a href="https://en.wikipedia.org/wiki/Resource_Description_Framework" target="_blank">Resource Description Framework (RDF)</a> and related semantic web technologies to provide a lightweight approach for data integration and exchange.</p>
+                            <p>At the core of SOyA is a YAML-based data model for describing data structures with bases and optional overlays, which provide additional information and context. This website uses for validating DID Documents the following SOyA structure - <a href="https://soya.ownyourdata.eu/Did/yaml" target="_blank">click here</a>.</p>
                         </div>
                     </div>
                 </div>
@@ -50,7 +52,8 @@
                     <div id="collapseThree" class="panel-collapse collapse" 
                             role="tabpanel" aria-labelledby="panel_3">
                         <div class="panel-body">
-                            <p>info text3</p>
+                            <p>This service is a Proof-of-Concept to demonstrate the <a href="https://ownyourdata.github.io/soya/#validation"  target="_blank">validation overlay capabilities of SOyA</a>, i.e., show-case an easy but still <a href="https://soya.ownyourdata.eu/Did/yaml" target="_blank">machine-readable format to describe DID Documents</a> and use the built-in mechanisms of SOyA to either validate conformance or list identified violations.</p>
+                            <p>The current <a href="https://soya.ownyourdata.eu/Did/yaml" target="_blank">DID Document SOyA structure</a> is most certainly not a complete and correct representation of the <a href="https://www.w3.org/TR/did-core/" target="_blank">DID Core Spec</a> and we would like to encourage everyone to <a href="https://github.com/OwnYourData/didlint/issues" target="_blank">report issues</a> or even <a href="https://github.com/OwnYourData/didlint/pulls" target="_blank">provide pull-requests</a> on the public <a href="https://github.com/OwnYourData/didlint" target="_blank">DID Lint Github repository</a>.</p>
                         </div>
                     </div>
                 </div>
@@ -67,7 +70,16 @@
                     <div id="collapseFour" class="panel-collapse collapse" 
                             role="tabpanel" aria-labelledby="panel_4">
                         <div class="panel-body">
-                            <p>info text4</p>
+                            <p>This website is just a frontend for the underlying technology of validating DID Documents. You can also use this service via an REST API by calling one of the following API endpoints:
+                            <ul>
+                                <li><code>GET /api/validate/:did</code>: provide a DID identifier (<code>:did</code>) and the service automatically resolves and validates the DID document;<br>example:
+                                <pre>curl https://didlint.ownyourdata.eu/api/validate/did:oyd:zQmZZbVygmbsxWXhP2BH5nW2RMNXSQA3eRqnzfkFXzH3fg1</pre>
+                                </li>
+                                <li><code>POST /api/validate</code>: provide a DID document in the body of a POST request;<br>example:
+                                    <pre>cat did_document.jsonld | curl -H 'Content-Type: application/json' -d @- -X POST https://didlint.ownyourdata.eu/api/validate</pre></li>
+                            </ul></p>
+                            <p>Swagger API of this service is available here: <a href="https://didlint.ownyourdata.eu/api-docs" target="_blank">https://didlint.ownyourdata.eu/api-docs</a><br>
+                            Docker image can be downloaded here: <a href="https://hub.docker.com/r/oydeu/didlint" target="_blank">https://hub.docker.com/r/oydeu/didlint</a>
                         </div>
                     </div>
                 </div>
@@ -84,7 +96,21 @@
                     <div id="collapseFive" class="panel-collapse collapse" 
                             role="tabpanel" aria-labelledby="panel_5">
                         <div class="panel-body">
-                            <p>info text5</p>
+                            <p>All functionality provided on this website leverages tools available on the command line. With the necessary building blocks and libraries installed you can perform the complete validation process locally. For convenience a Docker image with everything pre-installed is available here: <a href="https://hub.docker.com/r/oydeu/didlint" target="_blank">https://hub.docker.com/r/oydeu/didlint</a></p>
+                            <p>The process of validation actually comprises of 3 steps:
+                                <ol>
+                                    <li>Pre-processing DID Documents to be usable by the <code>soya-cli</code><br>
+                                        example script is available here: <a href="https://github.com/OwnYourData/didlint/blob/main/script/prep.sh" target="_blank"><code style="color: blue;">prep.sh</code></a></li>
+                                    <li>Executing the <a href="https://en.wikipedia.org/wiki/SHACL" target="_blank">SHACL</a> validation with the SOyA structure and input DID document<br>
+                                        syntax for valiating a DID document is: <code>cat input.json | soya validate Did</code></li>
+                                    <li>Parsing the response from SHACL to make the output human-readable<br>
+                                        script demonstrating post-processing: <a href="https://github.com/OwnYourData/didlint/blob/main/script/iterate.sh" target="_blank"><code style="color: blue;">iterate.sh</code></a></li>
+                                </ol>
+                            </p>
+                            <p>A typical sequence of commands to validate a DID document locally on your preferred shell is:<br>
+                                <pre>docker run -it --rm oydeu/didlint bash
+cat test/example_did_document.json | script/prep.sh | soya validate Did</pre>
+                            </p>
                         </div>
                     </div>
                 </div>
