--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,12 +8,7 @@
             <h1 class="visible-xs visible-sm hidden-md hiden-lg" style="text-align: left; margin-bottom: 10px; font-size: x-large; padding-right: 110px;"><div class="title-link">DID Lint<span style="font-size: 60%; top: -0.9em; position: relative; vertical-align: baseline;">Beta</span></div></h1>
             <h1 class="hidden-xs hidden-sm visible-md visible-lg" style="text-align: left; margin-bottom: 10px; font-size: x-large;"><div class="title-link">DID Lint<span style="font-size: 60%; top: -0.9em; position: relative; vertical-align: baseline;">Beta</span> - The DID Validator</div></h1>
           </div>
-          
-          <a href="https://www.ownyourdata.eu/" style="color: #42B58C; text-decoration: none; white-space: nowrap;" class="oyd-link">
-            <span style="text-decoration: underline;">
-              OwnYourData.eu</span> 
-            <i class="fa fa-long-arrow-up" aria-hidden="true" style="-webkit-transform:rotate(30deg); -moz-transform:rotate(30deg); -ms-transform:rotate(30deg); -o-transform:rotate(30deg); transform:rotate(30deg);"></i>
-          </a>
+          <a href="https://www.ownyourdata.eu/"><button type="button" class="btn btn-warning btn-lg" style="float: right;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> OwnYourData.eu</button></a>
         </div>
       </div>
     </div>
