--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,13 @@
 <div class="container" style="margin-top: 20px; margin-bottom: 20px;">
     <div class="row">
         <div class="col-md-12">
+            <div class="alert alert-info" role="alert">
+                This page checks the syntax and structure of a DID document to ensure that it conforms to the W3C Decentralized Identifiers Core Specification.
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <%= form_with url: resolve_path, class: "text-nowrap" do |form| %>
                 <div style="display: flex;">
                     <div class="input-group" style="width: 100%;">
