--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <footer class="footer">
-  <div class="container">
+  <div class="container" style="margin-bottom: 30px;">
     <nav>
       <ul style="padding-right: 120px;">
         <li><%= link_to "OwnYourData.eu", 'https://www.ownyourdata.eu' %> © 2023</li>
